--- a/app/views/homes/_about-fodmap.html.haml
+++ b/app/views/homes/_about-fodmap.html.haml
@@ -1,4 +1,11 @@
 .page-content
+  .wrapper
+    .rich-text
+      %p
+        FODMAPについての動画
+    .rich-text      
+      %iframe{allow: "accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: "", frameborder: "0", height: "350px", src: "https://www.youtube.com/embed/0EZ1hFZ_70I", width: "100%"}
+.page-content
   .about-wrapper
     .rich-text
       %h2 FODMAPsとは
@@ -49,13 +56,7 @@
         %span> P
         olyols
       %p ポリオール。ソルビトールとマンニトールといわれるもののことで、例えばカリフラワーとかマッシュルーム、アボカドなどの野菜や、その他人工甘味料に含まれている。
-.page-content
-  .wrapper
-    .rich-text
-      %p
-        FODMAPについての動画
-    .rich-text
-      %iframe{allow: "accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture", allowfullscreen: "", frameborder: "0", height: "350px", src: "https://www.youtube.com/embed/stdYoA4G9Dg", width: "100%"}
+
     -# .rich-text
     -#   %h2 What happens when you eat FODMAPs? 
     -#   %p
