--- a/app/views/recipes/search.html.haml
+++ b/app/views/recipes/search.html.haml
@@ -1,14 +1,16 @@
-%p 検索
-= form_tag(recipes_search_path,:method => 'get') do
-  = text_field_tag :search
-  = submit_tag 'Search', :name => nil
-- @recipes.each_slice(3) do |recipes|
-  .row
-    - recipes.each do |recipe|
-      .col-md-4
-        .recipe
-          .image_wrapper
-            = link_to recipe do
-              = image_tag recipe.picture.url if recipe.picture?
-          %h2= link_to recipe.title, recipe
-          = render 'likes/like', recipe: recipe      
+.container
+  .search-top-input
+    = form_tag(recipes_search_path,:method => 'get') do
+      = button_tag(type: "submit", class: "btn") do        
+        %i.fa.fa-search.fa-2x.icon{"aria-hidden" => "true"}              
+      = text_field_tag :search, "", placeholder: 'キーワード'                
+    - @recipes.each_slice(3) do |recipes|
+      .row
+        - recipes.each do |recipe|
+          .col-md-4
+            .recipe
+              .image_wrapper
+                = link_to recipe do
+                  = image_tag recipe.picture.url if recipe.picture?
+              %h2= link_to recipe.title, recipe
+              = render 'likes/like', recipe: recipe  
