--- a/app/views/shared/_stats.html.haml
+++ b/app/views/shared/_stats.html.haml
@@ -4,7 +4,8 @@
     %strong#following.stat
       = @user.following.count
     following
-  %a{:href => "#{followers_user_path(@user)}"}
-    %strong#followers.stat
-      = @user.followers.count
-    followers
+  .stats-second-child  
+    %a{:href => "#{followers_user_path(@user)}"}
+      %strong#followers.stat
+        = @user.followers.count
+      followers
