--- a/app/views/homes/index.html.haml
+++ b/app/views/homes/index.html.haml
@@ -4,8 +4,11 @@
   -#   = render 'shared/stats'
   -# = render 'shared/feed'
   -# = paginate @feed_items
-  = render partial: 'recipes/recipe'
-  = paginate @recipes
+  .loged-in-category
+    = render partial: 'category'
+  .container
+    = render partial: 'recipes/recipe'
+    = paginate @recipes
 - else     
   .main
     .row.left
@@ -16,7 +19,7 @@
         = link_to 'ログイン', new_user_session_path
       %button.btn.btn-warning{type: "button"}            
         = link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post        
-  = render partial: 'about-ibs'
-  = render partial: 'about-fodmap'
+  = render partial: 'what-is-happy-gut'        
+  = render partial: 'service'
+  = render partial: 'category'        
   = render partial: 'register-form'
-    
