--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,10 +10,10 @@
   %body
     = render 'layouts/header'
     - if user_signed_in?
-      .container
+      -# .container
         -# %p.notice= notice
         -# %p.alert= alert
-        = yield
+      = yield
       = render 'layouts/footer'
       = debug(params) if Rails.env.development?
     - else
