fix #39 Fix layouts

--- a/app/assets/stylesheets/_common.scss
+++ b/app/assets/stylesheets/_common.scss
@@ -26,11 +26,20 @@ label {
 .padding-4 {
   padding: 40px;
 }
+.padding-2 {
+  padding: 20px !important;
+}
 .text-center {
   text-align: center;
 }
+.d-flex {
+  display: flex;
+}
 .mb-30 {
   margin-bottom: 30px;
+}
+.mb-15 {
+  margin-bottom: 15px;
 }
 .bg-white {
   background-color: white;
