--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -40,6 +40,11 @@
 	.new-recipe-wrapper {
     padding: 0 !important;
 	}
+	.right .rich-text p {            
+    width: auto !important;
+    padding-right: 0 !important;
+    padding-top: 10px !important;    
+	}
 }
 
 .top-menu .navbar-nav li:nth-of-type(1) {	
@@ -294,4 +299,53 @@ body {
 }
 // =============================================================================
 // end search
+// =============================================================================
+
+// =============================================================================
+// user follow
+// =============================================================================
+.follow-lists-wrapper {
+	border: 1px solid #8a6d3b;		
+	border-radius: 10px;
+	margin: 0 100px;
+	.follow-lists-title {
+		border-bottom: 1px solid #8a6d3b;		
+	}
+	.follow-user {
+		display: flex;
+		padding: 20px 70px;
+		margin-bottom: 20px;
+		border-bottom: 1px solid #8a6d3b;
+		.follow-user-image {
+			img {
+				border-radius: 50px;
+			}
+		}
+		.follow-user-name {
+			padding: 26px;
+		}
+	}
+}
+
+
+
+// =============================================================================
+// end user follow
+// =============================================================================
+
+
+// =============================================================================
+// user register
+// =============================================================================
+
+.remember-check {
+	margin-left: -42px;
+}
+.remember-text {
+	margin-left: -29px;
+}
+
+
+// =============================================================================
+// end user register
 // =============================================================================
