--- a/app/views/devise/mailer/confirmation_instructions.html.haml
+++ b/app/views/devise/mailer/confirmation_instructions.html.haml
@@ -1,4 +1,4 @@
 %p
-  Welcome #{@email}!
-%p You can confirm your account email through the link below:
-%p= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token)
+  #{@email}様、Happy Gutへようこそ!
+%p 下のリンクをクリックするとアカウントが承認されます。
+%p= link_to 'アカウントを承認する', confirmation_url(@resource, confirmation_token: @token)
