--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,43 +1,44 @@
 - provide :title, "Sign up"
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :firstName
-    %br/
-    = f.text_field :firstName, autofocus: true, autocomplete: "firstName"
-  .field
-    = f.label :lastName
-    %br/
-    = f.text_field :lastName, autofocus: true, autocomplete: "lastName"
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-    - if @minimum_password_length
+.container
+  = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+    = render "devise/shared/error_messages", resource: resource
+    .field.mb-15
+      = f.label "名"
       %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "current-password"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+      = f.text_field :firstName, autofocus: true, autocomplete: "firstName"
+    .field.mb-15
+      = f.label "氏"
+      %br/
+      = f.text_field :lastName, autofocus: true, autocomplete: "lastName"
+    .field.mb-15
+      = f.label :email
+      %br/
+      = f.email_field :email, autofocus: true, autocomplete: "email"
+    - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+      %div
+        Currently waiting confirmation for: #{resource.unconfirmed_email}
+    .field.mb-15
+      = f.label :password
+      %i (変更したくない場合は空欄のままにしてください)
+      %br/
+      = f.password_field :password, autocomplete: "new-password"
+      - if @minimum_password_length        
+        %em
+          = @minimum_password_length
+          文字以上
+    .field.mb-15
+      = f.label :password_confirmation
+      %br/
+      = f.password_field :password_confirmation, autocomplete: "new-password"
+    .field.mb-15
+      = f.label :current_password
+      %i (変更を適応させるために、現在のパスワードを入力してください)
+      %br/
+      = f.password_field :current_password, autocomplete: "current-password"      
+    .actions.btn-yellow-normal
+      = f.submit "更新"
+  -# TODO:add account delete feature    
+  -# %h3 Cancel my account
+  -# %p
+  -#   Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
+  = link_to "戻る", :back
