--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -7,26 +7,26 @@
   .content-form.wrapper
     = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
       = render "devise/shared/error_messages", resource: resource
-      .field
-        = f.label :firstName
+      .field.mb-15
+        = f.label "名"
         %br/
         = f.text_field :firstName, autofocus: true, autocomplete: "firstName"
-      .field
-        = f.label :lastName
+      .field.mb-15
+        = f.label "性"
         %br/
         = f.text_field :lastName, autofocus: true, autocomplete: "lastName"
-      .field
+      .field.mb-15
         = f.label :email
         %br/
         = f.email_field :email, autofocus: true, autocomplete: "email"
-      .field
+      .field.mb-15
         = f.label :password
         - if @minimum_password_length
           %em
             (#{@minimum_password_length} 文字以上)
         %br/
         = f.password_field :password, autocomplete: "new-password"
-      .field
+      .field.mb-15
         = f.label :password_confirmation
         %br/
         = f.password_field :password_confirmation, autocomplete: "new-password"
