--- a/app/views/homes/_category.html.haml
+++ b/app/views/homes/_category.html.haml
@@ -5,19 +5,19 @@
       %h2.mb-5 低FODMAPレシピをカテゴリー別に探す
     .row    
       .category.col-md-5
-        %a
+        %a{href: "/tags/グルテンフリー"}
           .category-wrapper.category-bg-img1          
             %span.category-txt グルテンフリー
       .category.col-md-5
-        %a
+        %a{href: "/tags/ラクトースフリー"} 
           .category-wrapper.category-bg-img2          
             %span.category-txt ラクトースフリー
       .category.col-md-5
-        %a
+        %a{href: "/tags/ベジタリアン"}
           .category-wrapper.category-bg-img3          
             %span.category-txt ベジタリアン
       .category.col-md-5
-        %a
+        %a{href: "/tags/ビーガン"}
           .category-wrapper.category-bg-img4          
             %span.category-txt ビーガン
           
